fixed alignment for header print icon

--- a/sass/partials/components/_print.scss
+++ b/sass/partials/components/_print.scss
@@ -1,7 +1,7 @@
 .print {
 	position: absolute;
  	right: 6px;
- 	top: 20px;
+ 	top: 24px;
 
  	//  @include breakpoint($desktop-width) {
  	//  	right: 215px;
